--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
   Operating System :: OS Independent
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
   Topic :: Utilities
 license_file = LICENSE
 long_description = file: README.md
@@ -25,46 +26,21 @@ setup_requires =
   setuptools >= 38.6
   pip >= 10
   twine >= 1.11
-include_package_data = True
 packages = find:
+scripts =
+  AddGithubMembers.py
+  CreateGithubTeamRepos.py
+  DuplicateGithubRepos.py
+  ListGithubCollab.py
 install_requires =
   pygithub
   pandas
-  gitutils>=1.1.5
+  gitutils >= 1.1.5
 
 [options.extras_require]
 tests =
-  pytest
-cov =
-  pytest-cov
-  coveralls
   flake8
   mypy
 
 [options.entry_points]
 console_scripts =
-
-[flake8]
-max-line-length = 132
-exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
-
-[coverage:run]
-cover_pylib = false
-omit =
-  /home/travis/virtualenv/*
-  */site-packages/*
-  */bin/*
-
-[coverage:report]
-exclude_lines =
-  pragma: no cover
-  def __repr__
-  except RuntimeError
-  except NotImplementedError
-  except ImportError
-  except FileNotFoundError
-  except CalledProcessError
-  logging.warning
-  logging.error
-  logging.critical
-  if __name__ == .__main__.:
