--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = gitedu
 version = 0.8.0
 author = Michael Hirsch, Ph.D.
+author_email = scivision@users.noreply.github.com
 description = Manage large (100+) user teams for classroom and insitutions with GitHub API calls.
 url = https://github.com/scivision/gitedu
 keywords =
@@ -16,7 +17,8 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Topic :: Utilities
-license_file = LICENSE
+license_files =
+  LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown
 
