--- a/setup.cfg
+++ b/setup.cfg
@@ -24,10 +24,6 @@ long_description_content_type = text/markdown
 
 [options]
 python_requires = >= 3.6
-setup_requires =
-  setuptools >= 38.6
-  pip >= 10
-  twine >= 1.11
 packages = find:
 scripts =
   AddGithubMembers.py
@@ -42,6 +38,9 @@ install_requires =
 [options.extras_require]
 tests =
   flake8
+  flake8-bugbear
+  flake8-builtins
+  flake8-blind-except
   mypy
 
 [options.entry_points]
