put all gitutils github stuff into this repo
correct imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = gitedu
-version = 0.8.0
+name = pygithubutils
+version = 1.0.0
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
-description = Manage large (100+) user teams for classroom and insitutions with GitHub API calls.
-url = https://github.com/scivision/gitedu
+description = Manage large 1..1000 user teams for classroom and insitutions with GitHub API calls.
+url = https://github.com/scivision/pygithub-utils
 keywords =
   git
   GitHub
@@ -33,10 +33,12 @@ scripts =
 install_requires =
   pygithub
   pandas
-  gitutils >= 1.1.5
 
 [options.extras_require]
 tests =
+  pytest >= 3.9
+  pytest-cov
+lint =
   flake8
   flake8-bugbear
   flake8-builtins
