--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,13 +4,14 @@ on: [push, pull_request]
 
 jobs:
 
-  lint:
+  run:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - run: pip install -e .[tests]
+    - run: pip install -e .[tests,lint]
     - run: flake8
     - run: mypy .
+    - run: pytest -r a -v
