--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: '3.x'
     - run: pip install -e .[tests,lint]
     - run: flake8
     - run: mypy .
-    - run: pytest -r a -v
+    - run: pytest
