--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,23 @@
 [metadata]
 name = pygithubutils
-version = 1.0.0
+version = 1.0.1
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
 description = Manage large 1..1000 user teams for classroom and insitutions with GitHub API calls.
-url = https://github.com/scivision/pygithub-utils
+url = https://github.com/scivision/github-utils
 keywords =
   git
   GitHub
 classifiers =
-  Development Status :: 4 - Beta
+  Development Status :: 5 - Production/Stable
   Environment :: Console
   Intended Audience :: Developers
   Operating System :: OS Independent
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
+  Topic :: Software Development :: Version Control :: Git
   Topic :: Utilities
 license_files =
   LICENSE.txt
@@ -25,6 +27,7 @@ long_description_content_type = text/markdown
 [options]
 python_requires = >= 3.6
 packages = find:
+zip_safe = false
 scripts =
   AddGithubMembers.py
   CreateGithubTeamRepos.py
@@ -37,7 +40,6 @@ install_requires =
 [options.extras_require]
 tests =
   pytest >= 3.9
-  pytest-cov
 lint =
   flake8
   flake8-bugbear
