use __init__.py for imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = pygithubutils
-version = 1.0.1
+version = 1.0.2
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
 description = Manage large 1..1000 user teams for classroom and insitutions with GitHub API calls.
-url = https://github.com/scivision/github-utils
+url = https://github.com/scivision/pygithub-utils
 keywords =
   git
   GitHub
@@ -34,7 +34,7 @@ scripts =
   DuplicateGithubRepos.py
   ListGithubCollab.py
 install_requires =
-  pygithub
+  pygithub >= 1.44
   pandas
 
 [options.extras_require]
