--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pygithubutils
-version = 1.0.3
+version = 1.0.4
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
 description = Manage large 1..1000 user teams for classroom and insitutions with GitHub API calls.
@@ -31,6 +31,11 @@ zip_safe = false
 install_requires =
   pygithub >= 1.44
   pandas
+package_dir=
+    =src
+
+[options.packages.find]
+where=src
 
 [options.extras_require]
 tests =
