mass create repo, one team per repo of same name
use team oriented rather than repo-oriented

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pygithubutils
-version = 1.0.4
+version = 1.1.0
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
 description = Manage large 1..1000 user teams for classroom and insitutions with GitHub API calls.
@@ -29,7 +29,7 @@ python_requires = >= 3.6
 packages = find:
 zip_safe = false
 install_requires =
-  pygithub >= 1.44
+  pygithub >= 1.53
   pandas
 package_dir=
     =src
@@ -39,7 +39,7 @@ where=src
 
 [options.extras_require]
 tests =
-  pytest >= 3.9
+  pytest
 lint =
   flake8
   flake8-bugbear
