--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,20 @@
 [metadata]
-name = pygithubutils
-version = 1.1.0
+name = gitbulk
+version = 1.2.0
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
-description = Manage large 1..1000 user teams for classroom and insitutions with GitHub API calls.
-url = https://github.com/scivision/pygithub-utils
+description = Manage user teams for classroom and insitutions with Git remote API calls.
+url = https://github.com/scivision/pygit-bulk
 keywords =
   git
   GitHub
+  GitLab
 classifiers =
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Intended Audience :: Developers
   Operating System :: OS Independent
-  Programming Language :: Python :: 3.6
-  Programming Language :: Python :: 3.7
-  Programming Language :: Python :: 3.8
-  Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3
   Topic :: Software Development :: Version Control :: Git
   Topic :: Utilities
 license_files =
